tests/fixtures/invalid/none_sub_str.py
# Cannot subtract None and Str
x: None = None - "hello"
